Fix header alignment

--- a/src/css/layout/_header.css
+++ b/src/css/layout/_header.css
@@ -9,4 +9,9 @@ header {
     flex-grow: 1;
     margin: 0 10px;
   }
+
+  .logo {
+    position: relative;
+    top: 12px;
+  }
 }
